--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -20,30 +20,6 @@
     text-decoration: none;
 }
 
-/* spinners  RSABHA*/
-.se-pre-con {
-    position: fixed;
-    left: 0px;
-    top: 0px;
-    width: 100%;
-    height: 100%;
-    z-index: 9999;
-    background: url("https://meshwarna.com/assets/spinners/loader-64x/Preloader_2.gif")
-        center no-repeat;
-}
-
-#cover-spin {
-    position: fixed;
-    width: 100%;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    background-color: rgba(255, 255, 255, 0.7);
-    z-index: 9999;
-    /* display:none; */
-}
-
 @-webkit-keyframes spin {
     from {
         -webkit-transform: rotate(0deg);
@@ -62,7 +38,7 @@
     }
 }
 
-#cover-spin::after {
+/* #cover-spin::after {
     content: "";
     display: block;
     position: absolute;
@@ -77,7 +53,7 @@
     border-radius: 50%;
     -webkit-animation: spin 0.8s linear infinite;
     animation: spin 0.8s linear infinite;
-}
+} */
 
 /* end of spinners */
 
@@ -508,6 +484,13 @@ div#stages {
 }
 
 #loading {
+    left: 50%; 
+    position: absolute; 
+    text-align: center; 
+    top: 50%;
+    z-index: 9999; 
+}
+/* #loading {
     width: 100%;
     height: 100%;
     top: 120px;
@@ -525,4 +508,36 @@ div#stages {
     top: 100px;
     left: 240px;
     z-index: 100;
+} */
+
+/* spinners  RSABHA*/
+/* .se-pre-con {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: url("https://meshwarna.com/assets/spinners/loader-64x/Preloader_2.gif")
+        center no-repeat;
+} */
+
+#cover-spinx {
+    position: fixed;
+    /* width: 100%; */
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background-color: rgba(255, 255, 255, 0.7);
+    z-index: 9999;
+    /* display:none; */
+}
+
+#cover-spin {
+    left: 50%; 
+    position: absolute; 
+    text-align: center; 
+    top: 50%;
+    z-index: 9999; 
 }
